src/test/ui/traits/traits-multidispatch-convert-ambig-dest.stderr
error[E0282]: type annotations needed
  --> $DIR/traits-multidispatch-convert-ambig-dest.rs:26:5
   |
LL |     test(22, std::default::Default::default());
   |     ^^^^ cannot infer type for type parameter `U` declared on the function `test`
   |
help: consider specifying the type arguments in the function call
   |
LL |     test::<T, U>(22, std::default::Default::default());
   |         ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
